--- a/project.css
+++ b/project.css
@@ -8,7 +8,7 @@
   
   body {
     font-family: 'Poppins', sans-serif;
-    background: url('https://img.freepik.com/premium-photo/black-background-with-gold-pattern-words-light-up_644709-66.jpg') no-repeat center center;
+    background: url('./bg.jpg') no-repeat center center;
     background-size: cover;
     height: 100vh;
     display: flex;
